force-app/main/default/objects/Project__c/fields/Earliest_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Target_Date__c</fullName>
    <description>Campo formula que indica la Target Date de Milestone vía Roll-up sumary ( MIN Milestone )</description>
    <inlineHelpText>Campo formula que indica la Target Date de Milestone vía Roll-up sumary ( MIN Milestone )</inlineHelpText>
    <label>Earliest Target Date</label>
    <summarizedField>Milestone__c.Target_Date__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>