force-app/main/default/objects/Project__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Webpage</fullName>
                <default>true</default>
                <label>Webpage</label>
            </value>
            <value>
                <fullName>Ads</fullName>
            </value>
            <value>
                <fullName>Social media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>