force-app/main/default/objects/Project__c/recordTypes/Ads_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Ads_Record_type</fullName>
    <active>true</active>
    <label>Ads Record type</label>
</RecordType>