force-app/main/default/objects/Project__c/recordTypes/Social_Media_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Social_Media_Record_type</fullName>
    <active>true</active>
    <label>Social Media Record type</label>
</RecordType>