force-app/main/default/objects/Project__c/recordTypes/Webpage_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Webpage_Record_type</fullName>
    <active>true</active>
    <label>Webpage Record type</label>
</RecordType>