force-app/main/default/objects/Project__c/validationRules/End_Date_must_be_after_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_after_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>La fecha final del proyecto no puede ser menor que la fecha de inicio del proyecto</errorMessage>
</ValidationRule>